trunk/Archive2/2b/ff40c0a5208cf0/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In constructor ‘T::T(std::vector<double>&)’:
main.cpp:7:33: error: invalid initialization of non-const reference of type ‘std::vector<double>&’ from an rvalue of type ‘<brace-enclosed initializer list>’
     T(vector<double>& vv) : v{vv} {}
                                 ^
