trunk/Archive2/2b/ff40c0a5208cf0/main.cpp
#include <vector>

using namespace std;

struct T {
    vector<double>& v;
    T(vector<double>& vv) : v{vv} {}
};

int main()
{
}
